se añadio un archivo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </label>
                         <input type="password" required>
                     </div>
-                    <p class="forgot"><a href="#">Se te olvidó la contraseña?</a></p>
+                    <p class="forgot"><a href="registrarse.html">Se te olvidó la contraseña?</a></p>
                     <input type="submit" class="button button-block" value="Iniciar Sesión">
                 </form>
             </div>
